--- a/CodeUnion.CodeGenerator/Templates/3.5/ModelDao.xml.vm
+++ b/CodeUnion.CodeGenerator/Templates/3.5/ModelDao.xml.vm
@@ -79,14 +79,16 @@
 #foreach ($column in $allColumns)
 #each
 #if ($column.Alias == "CreateTime" || $column.Alias == "LastUpdateTime")
-				GetDate()#between
+				datetime($qualifier$column.Alias$qualifier)#between
+,
+#elseif ($column.Alias == "CreateDate")
+				date($qualifier$column.Alias$qualifier)#between
+,
 #else
 				$qualifier$column.Alias$qualifier#between
-#end
-#between
 ,
 #end
-
+#end
 			)
 		</insert>
 #else
@@ -107,14 +109,16 @@
 #foreach ($column in $columns)
 #each
 #if ($column.Alias == "CreateTime" || $column.Alias == "LastUpdateTime")
-				GetDate()#between
+				datetime($qualifier$column.Alias$qualifier)#between
+,
+#elseif ($column.Alias == "CreateDate")
+				date($qualifier$column.Alias$qualifier)#between
+,
 #else
 				$qualifier$column.Alias$qualifier#between
-#end
-#between
 ,
 #end
-
+#end
 			)
 		</insert>
 #end
